Prevent content overflow on popup level

--- a/resources/css/components/_popup.scss
+++ b/resources/css/components/_popup.scss
@@ -29,6 +29,7 @@
     min-width: unset !important;
     min-height: unset !important;
     transform: translateY(calc(var(--pico-spacing) * -1));
+    overflow: hidden;
   }
 
   &.visible {
